--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <header class="hero"></header>
+    <div class="hero"></div>
     <main class="content">
         <section id="search-engine-optimization" class="section">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine optimization" />
